--- a/web/user/Login.xhtml
+++ b/web/user/Login.xhtml
@@ -7,20 +7,20 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>login</title>
+        <title>Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
         <h:outputLabel for="username" value="Username:" />
-            <p:inputText id="username" value="#{LoginAdmin.username}" required="true" label="username" />
+        <p:inputText id="username" value="#{loginUser.username}" required="true" label="username" />
  
             <h:outputLabel for="password" value="Password:" />
-            <p:password id="password" value="#{LoginAdmin.password}" required="true" label="password" />
+            <p:password id="password" value="#{loginUser.password}" required="true" label="password" />
  
-                <p:commandButton value="Login"  action="#{LoginAdmin.login()}" />
-            
-
+            <p:commandButton value="Login"  action="#{loginUser.login}" />
     </h:body>
 </html>
