--- a/web/admin/admin.xhtml
+++ b/web/admin/admin.xhtml
@@ -16,30 +16,30 @@ and open the template in the editor.
     </h:head>
     <h:body>
         <ui:composition>
-    <p:tab id="adminTab" title="Admin" rendered="#{sec:areAnyGranted('ROLE_ADMIN')}">
+    <p:tab id="adminTab" title="Admin">
         <p:tabView orientation="left" dynamic="true" cache="false">
             <p:tab title="JMX">
                 <h:outputText value="Lorem 8"/>
             </p:tab>
 
-            <p:tab title="Logging">
-                <ui:include src="admin/logback.xhtml"/>
+            <p:tab title="livres">
+                <ui:include src="livres.xhtml"/>
             </p:tab>
 
             <p:tab title="Sessions">
-                <ui:include src="admin/sessions.xhtml"/>
+                <ui:include src="login.xhtml"/>
             </p:tab>
 
             <p:tab title="JVM">
-                <ui:include src="admin/runtime.xhtml"/>
+                <ui:include src="login.xhtml"/>
             </p:tab>
 
             <p:tab title="Host Environment">
-                <ui:include src="admin/environment.xhtml"/>
+                <ui:include src="login.xhtml"/>
             </p:tab>
 
             <p:tab title="System Properties">
-                <ui:include src="admin/properties.xhtml"/>
+                <ui:include src="login.xhtml"/>
             </p:tab>
 
         </p:tabView>
