Login user works

--- a/web/user/acceuil.xhtml
+++ b/web/user/acceuil.xhtml
@@ -11,10 +11,10 @@ and open the template in the editor.
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>TODO supply a title</title>
+        <title>admin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
-        <p>Bienvenue #{loginUser.username} !</p>
+        <p>#{loginUser.username}</p>
     </h:body>
 </html>
