--- a/web/admin/admin.xhtml
+++ b/web/admin/admin.xhtml
@@ -15,35 +15,25 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
-        <ui:composition>
-    <p:tab id="adminTab" title="Admin">
-        <p:tabView orientation="left" dynamic="true" cache="false">
-            <p:tab title="JMX">
-                <h:outputText value="Lorem 8"/>
-            </p:tab>
-
-            <p:tab title="livres">
-                <ui:include src="livres.xhtml"/>
-            </p:tab>
-
-            <p:tab title="Sessions">
-                <ui:include src="login.xhtml"/>
-            </p:tab>
-
-            <p:tab title="JVM">
-                <ui:include src="login.xhtml"/>
-            </p:tab>
-
-            <p:tab title="Host Environment">
-                <ui:include src="login.xhtml"/>
-            </p:tab>
-
-            <p:tab title="System Properties">
-                <ui:include src="login.xhtml"/>
-            </p:tab>
-
-        </p:tabView>
-    </p:tab>
-</ui:composition>
+<p:tabMenu activeIndex="#{param.i-1}">
+    <p:menuitem value="Utilisateurs" outcome="utilisateurs.xhtml" icon="ui-icon-person">
+        <f:param name="i" value="0" />
+    </p:menuitem>
+    <p:menuitem value="Documents" outcome="documents.xhtml" icon="ui-icon-document">
+        <f:param name="i" value="1" />
+    </p:menuitem>
+    <p:menuitem value="Reservations" outcome="reservations.xhtml" icon="ui-icon-search">
+        <f:param name="i" value="2" />
+    </p:menuitem>
+    <p:menuitem value="Auteurs" outcome="auteurs.xhtml" icon="ui-icon-wrench">
+        <f:param name="i" value="3" />
+    </p:menuitem>
+    <p:menuitem value="Categories" outcome="categories.xhtml" icon="ui-icon-star">
+        <f:param name="i" value="4" />
+    </p:menuitem>
+    <p:menuitem value="Logout" actionListener="#{loginAdmin.logout()}" outcome="login.xhtml" icon="ui-icon-extlink">
+        <f:param name="i" value="5" />
+    </p:menuitem>
+    </p:tabMenu>
     </h:body>
 </html>
