menu 2 rakka7 avec strecture de fichiers

--- a/web/admin/admin.xhtml
+++ b/web/admin/admin.xhtml
@@ -29,8 +29,8 @@ and open the template in the editor.
         </p:submenu>
   
          <p:submenu label="Reservation" icon="ui-icon-disk">
-            <p:menuitem value="retour" url="/reserv/retour.xhtml" />
-            <p:menuitem value="perdu" url="/reserv/perdu.xhtml" />
+            <p:menuitem value="retour" url="reserv/retour.xhtml" />
+            <p:menuitem value="perdu" url="reserv/perdu.xhtml" />
             
         </p:submenu>
         
