--- a/web/user/accueil.xhtml
+++ b/web/user/accueil.xhtml
@@ -9,45 +9,97 @@ and open the template in the editor.
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>TODO supply a title</title>
+        <title>Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
-        <h:form>
-             <p:accordionPanel multiple="true" value="#{viewDocs.docs}" var="doc">
-                <p:tab title="#{doc.titre}">
-                    <h:panelGrid columns="3"  columnClasses="logo,description,detail"  >
-                        <p:graphicImage value="../#{doc.img}" width="121" height="175"/> 
-
-                        <p:outputPanel style="width:80%;margin-left: 1cm;margin-right: 0cm"> 
-                            <h:outputText value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding. His beloved son Michael has just come home from the war, but does not intend to become part of his father's business. Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family."/>
-                        </p:outputPanel>
-                        <p:outputPanel style="width:80%;margin-left: cm;margin-right: 2cm">
-                            <h:panelGrid columns="2" cellpadding="5">
-
-                                <h:outputText value="Auteur: " />
-                                <h:outputText value="#{doc.auteur}" style="font-weight: bold"/>
-
-                                <h:outputText value="Date: " />
-                                <h:outputText value="#{doc.dateSortie}" style="font-weight: bold"/>
-
-                                <h:outputText value="Categorie: " />
-                                <h:outputText value="#{doc.categorie}" style="font-weight: bold"/>
-                                <p:button value="Ajouter" icon="ui-icon-star">
-
-                                </p:button>
-                                <p:commandButton value="Réserver" actionListener="#{panier.addDoc(doc)}"/>
+        <f:view contentType="text/html">
+            <h:form>
 
 
+                <p:messages id="messages"/>
+
+                <p:menubar>
+                    <p:menuitem value="Home" icon="ui-icon-home" url="accueil.xhtml"/>
+
+                    <p:menuitem value="Login" icon="ui-icon-person" url="Login.xhtml"/>
+                    <p:menuitem value="Admin" icon="ui-icon-locked" url="../admin/login.xhtml"/>
+
+
+
+
+                    <f:facet name="options">
+                        <p:commandButton value="Rechercher" icon="ui-icon-search"/>
+                        <p:commandButton type="button" value="Logout" icon="ui-icon-extlink" />
+                    </f:facet>
+                </p:menubar>           
+            </h:form>
+
+            <p:panelGrid columns="2">
+                <p:column rowspan="#{viewDocs.docs.size}">
+                    <h:form style="margin-top: 0;">
+
+                        <p:growl autoUpdate="true"/>
+
+                        <p:menu style="width:300px;">
+                            <p:submenu label="Catégories" icon="ui-icon-flag">
+                                <p:menuitem value="Voir tout" update=":list"  action="#{viewDocs.viewAll()}"/>
+                                <p:menuitem value="Informatiques" update=":list"  action="#{viewDocs.categories('informatiques')}"/>
+                                <p:menuitem value="Sciences-fiction" update=":list"  action="#{viewDocs.categories('science fiction')}"/>
+                                <p:menuitem value="Action" update=":list"  action="#{viewDocs.categories('action')}"/>
+                                <p:menuitem value="Romance" update=":list"  action="#{viewDocs.categories('romance')}"/>
+                            </p:submenu>
+                            <p:submenu label="Panier">
+                                <p:menuitem value="Consulter" url="panier.xhtml" icon ="ui-icon-cart" />
+                            </p:submenu>
+                            <p:submenu label="Connexion">
+                                
+                                <p:menuitem value="Déconnexion" icon="ui-icon-power"/>
+                                
+                            </p:submenu>
+                        </p:menu>
+                    </h:form>
+                </p:column>
+
+                <h:form id="list">
+                    <p:messages id="msg"/>
+                    <p:accordionPanel multiple="true" value="#{viewDocs.docs}" var="doc" >
+                        <p:tab title="#{doc.titre}">
+                            <h:panelGrid columns="3"  columnClasses="logo,description,detail"  >
+                                <p:graphicImage value="../#{doc.img}" width="121" height="175"/> 
+
+                                <p:outputPanel style="width:80%;margin-left: 1cm;margin-right: 0cm"> 
+                                    <h:outputText value="#{doc.description}"/>
+                                </p:outputPanel>
+                                <p:outputPanel style="width:80%;margin-left: cm;margin-right: 2cm">
+                                    <h:panelGrid columns="2" cellpadding="5">
+
+                                        <h:outputText value="Auteur: " />
+                                        <h:outputText value="#{doc.auteur}" style="font-weight: bold"/>
+
+                                        <h:outputText value="Date: " />
+                                        <h:outputText value="#{doc.dateSortie}" style="font-weight: bold"/>
+
+                                        <h:outputText value="Categorie: " />
+                                        <h:outputText value="#{doc.categorie}" style="font-weight: bold"/>
+                                        <p:commandButton value="Ajouter" icon="ui-icon-cart" actionListener="#{panier.addDoc(doc)}"/>
+
+                                        <p:commandButton value="Réserver" icon="ui-icon-tag" actionListener="#{panier.addDoc(doc)}"/>
+
+
+
+                                    </h:panelGrid>
+                                </p:outputPanel>
 
                             </h:panelGrid>
-                        </p:outputPanel>
+                        </p:tab>
+                    </p:accordionPanel>
+                </h:form>
+            </p:panelGrid>
 
-                    </h:panelGrid>
-                </p:tab>
-            </p:accordionPanel>
-        </h:form>
+        </f:view>
     </h:body>
 </html>
