--- a/web/admin/categories.xhtml
+++ b/web/admin/categories.xhtml
@@ -37,5 +37,19 @@ and open the template in the editor.
          <f:param name="i" value="5" />
      </p:menuitem>
      </p:tabMenu>
+                         <h:form>
+           
+ 
+                     <p:dataTable id="table" var="obj" value="#{catView.cat}" >
+                <p:growl id="growl" life="2000" />
+                <p:column filterBy="#{obj.id}" headerText="id" footerText="" filterMatchMode="contains">
+                    <h:outputText value="#{obj.id}" />
+        </p:column>
+                <p:column filterBy="#{obj.nom}" headerText="nom" footerText="" filterMatchMode="contains">
+                    <h:outputText value="#{obj.nom}" />
+</p:column>
+          
+  </p:dataTable>
+</h:form> 
     </h:body>
 </html>
