--- a/web/admin/auteur.xhtml
+++ b/web/admin/auteur.xhtml
@@ -37,5 +37,25 @@ and open the template in the editor.
          <f:param name="i" value="5" />
      </p:menuitem>
      </p:tabMenu>
+                 <h:form>
+           
+ 
+                     <p:dataTable id="table" var="obj" value="#{autView.aut}" >
+                <p:growl id="growl" life="2000" />
+                <p:column filterBy="#{obj.id}" headerText="id" footerText="" filterMatchMode="contains">
+                    <h:outputText value="#{obj.id}" />
+        </p:column>
+                <p:column filterBy="#{obj.nom}" headerText="nom" footerText="" filterMatchMode="contains">
+                    <h:outputText value="#{obj.nom}" />
+        </p:column>
+                <p:column filterBy="#{obj.datenais}" headerText="date nais" footerText="" filterMatchMode="contains">
+                    <h:outputText value="#{obj.datenais}" />
+        </p:column>
+                <p:column filterBy="#{obj.pays}" headerText="pays" footerText="" filterMatchMode="contains">
+                    <h:outputText value="#{obj.pays}" />
+        </p:column>
+          
+  </p:dataTable>
+</h:form> 
     </h:body>
 </html>
