--- a/web/user/search.xhtml
+++ b/web/user/search.xhtml
@@ -22,48 +22,63 @@ and open the template in the editor.
         <h:form style="padding-left: 5px;padding-right: 5px;">
             <p:messages id="messages"/>
             <p:menubar>
-                <p:menuitem value="Home" icon="ui-icon-home" url="accueil.xhtml"/>
-                <p:menuitem value="Login" icon="ui-icon-person" url="Login.xhtml"/>
-                <p:menuitem value="Admin" icon="ui-icon-locked" url="../admin/login.xhtml"/>
-                <f:facet name="options">
-                    <p:commandButton type="button" value="Logout" ajax="false" icon="ui-icon-extlink" action="#{loginUser.logout}"/>
-                </f:facet>
-            </p:menubar>           
+                    <p:menuitem value="Home" icon="ui-icon-home" outcome="accueil"/>
+                    <c:if test="#{empty sessionScope.username}">
+                        <p:menuitem value="Login" icon="ui-icon-person" url="Login.xhtml"/>
+                    </c:if>
+                    <p:menuitem value="Admin" icon="ui-icon-locked" url="../admin/login.xhtml"/>
+                    <c:if test="#{empty sessionScope.username}">
+                        <p:menuitem value="SignIn" icon="ui-icon-locked" url="signIn.xhtml"/>
+                    </c:if>
+                    <p:menuitem value="Rechercher" icon="ui-icon-search" url="search.xhtml" style="float: left"/>
 
 
-            <h1 style="text-align: center;">Rechercher </h1>
-            <b:dataTable value="#{viewDocs.docs}" var="doc" id="bcarPool" styleClass="table table-striped table-bordered" style="width:100%">
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Titre" />
-                    </f:facet>
-                    <h:outputText value="#{doc.titre}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Auteur" />
-                    </f:facet>
-                    <h:outputText value="#{doc.auteur}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Categorie" />
-                    </f:facet>
-                    <h:outputText value="#{doc.categorie}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Action" />
 
+                    <f:facet name="options">
+                        <p:menuitem value="Rechercher" icon="ui-icon-search" action="search"/>
+                        <c:if test="#{!empty sessionScope.username}">
+                            <p:commandButton value="Logout" ajax="false" onclick="return confirm('Etes vous sur de vouloir déconnecter ?')" icon="ui-icon-extlink" action="#{loginUser.logout}" />
+                        </c:if>
                     </f:facet>
-                    <p:commandButton value="Consulter"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">
-                        <h:outputText value="Disponible"/>
-                    </f:facet>
-                </h:column>
-            </b:dataTable>
+                </p:menubar>         
+
+        </h:form>
+        <h:form>
+            <p:panel>
+                <h1 style="text-align: center;">Rechercher </h1>
+                <b:dataTable value="#{viewDocs.docs}" var="doc" id="bcarPool" styleClass="table table-striped table-bordered" style="width:100%">
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Titre" />
+                        </f:facet>
+                        <h:outputText value="#{doc.titre}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Auteur" />
+                        </f:facet>
+                        <h:outputText value="#{doc.auteur}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Categorie" />
+                        </f:facet>
+                        <h:outputText value="#{doc.categorie}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Action" />
+
+                        </f:facet>
+                        <p:commandButton value="Consulter"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Disponible"/>
+                        </f:facet>
+                    </h:column>
+                </b:dataTable>
+            </p:panel>
         </h:form>
     </h:body>
 </html>
