--- a/web/admin/login.xhtml
+++ b/web/admin/login.xhtml
@@ -7,17 +7,17 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui">
     <h:head>
         <title>login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="/Online-Library/faces/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/Online-Library/faces/css/sb-admin-2.css" />
     </h:head>
-    <h:body>
-        
-    <div class="container">
-        <div class="row">
+    <h:body>    
+    <b:container>
+        <b:row>
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
@@ -42,7 +42,7 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </b:row>
+    </b:container>
     </h:body>
 </html>
