--- a/web/admin/menu.xhtml
+++ b/web/admin/menu.xhtml
@@ -3,26 +3,17 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui">
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:b="http://bootsfaces.net/ui">
     
-    <p:tabMenu activeIndex="#{param.i}">
-     <p:menuitem value="Utilisateurs" outcome="utilisateurs.xhtml" icon="ui-icon-person">
-         <f:param name="i" value="0" />
-     </p:menuitem>
-     <p:menuitem value="Documents" outcome="documents.xhtml" icon="ui-icon-document">
-         <f:param name="i" value="1" />
-     </p:menuitem>
-     <p:menuitem value="Reservations" outcome="reservations.xhtml" icon="ui-icon-search">
-         <f:param name="i" value="2" />
-     </p:menuitem>
-     <p:menuitem value="Auteurs" outcome="auteur.xhtml" icon="ui-icon-wrench">
-         <f:param name="i" value="3" />
-     </p:menuitem>
-     <p:menuitem value="Categories" outcome="categories.xhtml" icon="ui-icon-star">
-         <f:param name="i" value="4" />
-     </p:menuitem>
-     <p:menuitem value="Logout" actionListener="#{loginAdmin.logout()}" outcome="dc.xhtml" icon="ui-icon-extlink">
-         <f:param name="i" value="5" />
-     </p:menuitem>
-     </p:tabMenu>
+    <b:navBar brand="Admin">
+    <b:navbarLinks>
+        <b:navLink value="Utilisateurs" href="utilisateurs.xhtml" icon="ui-icon-person"></b:navLink>
+        <b:navLink value="Documents" href="documents.xhtml" icon="ui-icon-document"></b:navLink>
+        <b:navLink value="Reservations" href="reservations.xhtml" icon="ui-icon-search"></b:navLink>
+        <b:navLink value="Auteurs" href="auteur.xhtml" icon="ui-icon-wrench"></b:navLink>
+        <b:navLink value="Categories" href="categories.xhtml" icon="ui-icon-star"></b:navLink>
+        <b:navLink value="Logout" href="dc.xhtml" icon="ui-icon-extlink"></b:navLink>
+    </b:navbarLinks>
+</b:navBar>
 </ui:composition>
